--- a/src/app/add-products/add-products.component.html
+++ b/src/app/add-products/add-products.component.html
@@ -1,13 +1,10 @@
-
+<app-navbar></app-navbar>
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
             <div class="row g-3">
-                <div class="col col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <label class="form-label">Upload Image</label>
-                    <input type="file" name="" id="" class="form-control">
-                </div>
+            
                 <div class="col col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label class="form-label">Product Title</label>
                     <input type="text" name="" id="" class="form-control">
@@ -23,6 +20,10 @@
                 <div class="col col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label class="form-label">Seller Name</label>
                     <input type="textbox" name="" id="" class="form-control">
+                </div>
+                <div class="col col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <label class="form-label">Upload Image</label>
+                    <input type="file" name="" id="" class="form-control">
                 </div>
                 <div class="col col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label class="form-label">Quantity</label>
