--- a/src/app/view-products/view-products.component.html
+++ b/src/app/view-products/view-products.component.html
@@ -1,3 +1,5 @@
+
+<app-navbar></app-navbar>
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
@@ -16,7 +18,7 @@
                           <li class="list-group-item">Category : {{i.category}}</li>
                           <li class="list-group-item">Price : {{i.price}}</li>
                           <li class="list-group-item">Rating : {{i.rating.rate}}/{{i.rating.count}}</li>
-                          <li class="list-group-item"><a routerLink="#" class="card-link">Buy Now</a><a href="#" class="card-link">Add to Cart</a></li>
+                          <li class="list-group-item"><a routerLink="#" class="card-link">Buy Now</a><a routerLink="#" class="card-link">Add to Cart</a></li>
                         </ul>
                       </div>
                 </div>
